--- a/package.json
+++ b/package.json
@@ -3,18 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^5.8.0",
     "@types/react": "^16.8.2",
     "@types/react-dom": "^16.8.0",
     "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "react-dom": "^16.8.0",
+    "react-scripts": "^5.0.0",
+    "tsyringe": "4.6.0",
+    "typescript": "^3.2.1 || ^4"
+  },
+  "devDependencies": {
+    "react-scripts-ts": "latest"
   },
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject"
-  },
-  "devDependencies": {
-    "react-scripts-ts": "latest"
   }
 }
